--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -12,6 +12,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+        with:
+          lfs: true      
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
