--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -14,6 +14,12 @@ jobs:
       - uses: actions/checkout@v3
         with:
           lfs: true      
+      - name: Import key
+        env: 
+          # Imported using `gpg --export-secret-key "Discord Apt Repository" | base64 > private.pgp`
+          PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}      
+        run: |
+          echo -n "$PRIVATE_KEY" | base64 --decode | gpg --pinentry-mode loopback --import
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
@@ -22,12 +28,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - name: Import key
-        env: 
-          # Imported using `gpg --export-secret-key "Discord Apt Repository" | base64 > private.pgp`
-          PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}      
-        run: |
-          echo -n "$PRIVATE_KEY" | base64 --decode | gpg --import
       - name: Update packages
         env: 
             KEY_PASSPHRASE: ${{ secrets.KEY_PASSPHRASE }}
