--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -24,6 +24,7 @@ jobs:
           python-version: 3.9
       - name: Install dependencies
         run: |
+          git lfs fetch
           git lfs checkout
           python -m pip install --upgrade pip
           pip install -r requirements.txt
