--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -25,8 +25,10 @@ jobs:
           python-version: 3.9
       - name: Install dependencies
         run: |
+          ls -l debian/pool  
           git lfs fetch
           git lfs checkout
+          ls -l debian/pool
           python -m pip install --upgrade pip
           pip install -r requirements.txt
       - name: Update packages
