--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -31,10 +31,19 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-        with:
-            lfs: true
       - name: Setup Pages
         uses: actions/configure-pages@v3
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.9
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - name: Update packages
+        run: |
+            python get_new_package.py --force
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
