Try and merge more branches

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -1,7 +1,10 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "config:recommended"
+    ":dependencyDashboard",
+    ":ignoreModulesAndTests",
+    "replacements:all",
+    "workarounds:all"
   ],
   "packageRules": [
     {
