Disable uv renovate

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -12,6 +12,10 @@
       "groupSlug": "all",
       "separateMajorMinor": false,
       "automerge": true
-    }
+    },
+    {
+      "matchPackageNames": ["uv"],
+      "enabled": false
+    },
   ]
 }
