--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -9,11 +9,11 @@
   "packageRules": [
     {
       matchUpdateTypes: ["patch", "minor"],
-      disable: true
+      enabled: false
     },
     {
-      "matchPackageNames": ["*"],
-      "automerge": true
+      matchPackageNames: ["*"],
+      automerge: true
     },    
   ],
   "vulnerabilityAlerts": {
