--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -2,8 +2,10 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     ":ignoreModulesAndTests",
+    "group:monorepos",
+    "group:recommended",
     "replacements:all",
-    "workarounds:all"
+    "workarounds:all",
   ],
   // We want major versions or security updates, the rest we really don't care about
   "packageRules": [
